--- a/16. API, JSON og Fetch/index.html
+++ b/16. API, JSON og Fetch/index.html
@@ -3,12 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
-<h1> Amalies Hjemmeside</h1>
-<h2></h2>
-<h3></h3>
-<h4></h4>
+
+<h1>Exercises - API, JSON and fetch</h1>
+
+<h2>Exercise 1 - level 1</h2>
+
+
+<h2>Exerise 2 - level 1</h2>
+<h3 id="exercise2"></h3>
+
+<h2>Exerise 3 - level 1</h2>
+<h3 id="exercise3"></h3>
+
+<h2>Exerise 3 - level 1</h2>
+<h3 id="exercise3_1"></h3>
+
+<h2>Exerise 4 - level 2</h2>
+<ul id="exercise4"></ul>
+
+<h2>Exercise 5 - level 2</h2>
+<h3 id="exercise5"></h3>
+
 <script src="main.js"></script>
 </body>
 </html>
